# http-enclave

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.enclave  Dockerfile.enclave.tcp  Dockerfile.enclave.vsock  Dockerfile.host  Dockerfile.host.tcp  Dockerfile.host.vsock  Makefile  README.md  docker-compose.tcp.yml  docker-compose.vsock.yml
crates/enclave/: Cargo.toml
crates/enclave/src/: main.rs
crates/host/: Cargo.toml
crates/host/src/: main.rs
