[package]
name = "enclave"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
# vsock server for real enclaves; TCP fallback for local dev
vsock = { version = "0.5", optional = true }
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }