[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.10.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
rand_core = "0.6.4"
rcgen = "0.14.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-vsock = { version = "0.7.2", optional = true }

[features]
default = ["tcp"]
tcp = []
vsock = ["dep:tokio-vsock"]
